# eca-url-scrapper-poc

./: LICENSE  Makefile  README.md  postinstall.py  pyproject.toml
poc/: bsoup_scrapper.ipynb  crawl4ai_scrapper.ipynb  output.json  output_correct_promt.json
poc/crawl4ai_output/: scraped_content.md
poc/firecrwal_output/: crawl_file.json  scrape_file.json
poc/soup_output/: file_1.txt
src/: main.py
src/application/: pdf_orchestrator.py  scraper_service.py
src/domain/: models.py  pdf_service.py
src/eca-scrapper/: bsoup_scrapper.ipynb  crawl4ai_scrapper.ipynb  extractchain_scrapper.ipynb  firecrawl_scrapper.ipynb  first_scrapper.ipynb  html_to_text.ipynb  langchain_scrapper.ipynb  llm_scrapper.ipynb  output.json  output_chunks.json  output_copy.json  scrapingant_scrapper.ipynb
src/eca-scrapper/crawl4ai_output/: scraped_content.md
src/eca-scrapper/extactchain_output/: file.json
src/eca-scrapper/firecrwal_output/: scrap_page_content.md
src/eca-scrapper/html2text_output/: file_1.txt
src/infrastructure/: langchain_reformatter.py  weasyprint_adapter.py  web_crawler.py
src/interfaces/: api.py
