[tool.poetry]
name = "web-scrapper-service"
version = "0.1.0"
description = "Microservice that scrapes webpages and return Markdown/HTML"
authors = ["Armando Castillo eduardocastillo@creai.mx"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.3"
html2text = "2024.2.26"
jupyter = "1.1.1"
langchain = "0.3.14"
langchain-openai = "0.3.0"
langchain-community = "0.3.14"
playwright = "1.49.1"
python-dotenv = "^1.0.1"
firecrawl-py = "^1.11.0"
crawl4ai = "^0.4.247"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
weasyprint = "^64.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

